2011-05-11  Satoru Takabayashi  <satorux@google.com>
	    Paul Pluzhnikov  <ppluzhnikov@google.com>

	* gcc/doc/install.texi (Configuration): Document
	--with-linker-hash-style.
	* gcc/gcc.c (init_spec): Handle LINKER_HASH_STYLE.
	* gcc/config.in: Add LINKER_HASH_STYLE.
	* gcc/configure.ac: Add --with-linker-hash-style.
	* gcc/configure: Regenerate.

2011-07-18  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config.gcc: Obsolete i[3456x]86-*-netware*.

2011-07-17  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/49746
	Revert:
	2010-12-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/pa/pa.md: Add ",*" condition to 64-bit add/subtract boolean
	patterns.

2011-07-17  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/49732
	* tree.c (walk_tree_1) <DECL_EXPR>: Do not walk a pointed-to type.

2011-07-16  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/49725
	Backport from mainline
	2011-03-31  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-pre.c (create_component_ref_by_pieces_1) <ARRAY_REF>: Drop
	a zero minimum index only if it is redundant.

2011-07-15  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/49723
	* config/pa/pa.md (casesi): Use gen_int_mode instead of GEN_INT.

2011-07-15  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:
	2011-07-13  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.c (TARGET_ASM_FILE_START): Do not define.
	(asm_file_start): Remove.
	(spu_machine_dependent_reorg): Call compute_bb_for_insn and
	free_bb_for_insn around code that modifies insns before
	restarting df analysis.

2011-07-15  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2011-07-13  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/49541
	* config/sol2.h (LIB_SPEC): Simplify.
	Move LIB_THREAD_LDFLAGS_SPEC ...
	(LINK_SPEC): ... here.

2011-07-14  James Greenhalgh  <james.greenhalgh@arm.com>
