@@ -1,3 +1,8 @@
+2011-08-08  Martin Jambor  <mjambor@suse.cz>
+
+	PR middle-end/49923
+	* gcc.dg/tree-ssa/pr49923.c: New test.
+
 2011-07-27  Jeffrey Yasskin  <jyasskin@google.com>
 
 	* g++.old-deja/g++.pt/crash60.C: Updated.
